[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lgtvremote-cli"
version = "1.1.0"
description = "Command-line interface for controlling LG webOS TVs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Gary Riches" }
]
keywords = ["lg", "tv", "webos", "remote", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
]
dependencies = []

[project.scripts]
lgtv = "lgtvremote_cli:main"

[project.urls]
Homepage = "https://github.com/griches/lgtvremote-cli"
